gl31-master/src/test/deca/syntax/invalid/complet/main_before.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 9: Erreur, le main est avant les classes
//
// Historique:
//    cree le 18/01/2021
{
    print("main avant");
}
class Test{

    protected int i;
    float f = 2.45e4f;
    
    void methodeTest(int param1, float param2){
        printx(i*param1*param2);
    }
    void toString(){
        println("Phrase random");
    }
    void resFloat(float param){
        print(f*param);
    }
}
